k8s/data/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-service
spec:
  selector:
    app: data-service
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: ClusterIP
