k8s/data/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: data-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - data.local
    secretName: data-tls
  rules:
  - host: data.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: data-service
            port:
              number: 5000
